k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-client
  labels:
    app: ecommerce-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-client
  template:
    metadata:
      labels:
        app: ecommerce-client
    spec:
      containers:
      - name: client
        image: REPLACE_ME_CLIENT_IMAGE
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-client-svc
  # We use a backend config for the cloud load balancer to know it's port 8001
  annotations:
    cloud.google.com/backend-config: '{"default": "ecommerce-client-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: ecommerce-client
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
