k8s/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-ui
  labels:
    app: ecommerce-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-ui
  template:
    metadata:
      labels:
        app: ecommerce-ui
    spec:
      containers:
      - name: ui
        image: REPLACE_ME_UI_IMAGE
        ports:
        - containerPort: 80
        # The UI will be built differently depending on VITE_API_URL, or we can use Nginx reverse proxy inside the UI container.
        # Assuming UI runs Nginx serving static files on port 80.
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-ui-svc
  annotations:
    cloud.google.com/backend-config: '{"default": "ecommerce-ui-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: ecommerce-ui
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
