k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ecommerce-alb-public-ip"
spec:
  rules:
  - http:
      paths:
      # Route /api/ to the Client Backend
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ecommerce-client-svc
            port:
              number: 8001
      # Route everything else to the React UI
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ecommerce-ui-svc
            port:
              number: 80
